@@ -1,19 +1,14 @@
 package com.example.suivi_projet.security.services;
 
-
-
 import com.example.suivi_projet.organisation.entities.Employe;
 import com.example.suivi_projet.organisation.repositories.EmployeRepository;
-import com.example.suivi_projet.exceptions.ResourceNotFoundException;
-
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
+import java.util.Collections;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
-
     private final EmployeRepository employeRepository;
 
     public CustomUserDetailsService(EmployeRepository employeRepository) {
@@ -21,18 +16,18 @@ public class CustomUserDetailsService implements UserDetailsService {
     }
 
     @Override
-    public UserDetails loadUserByUsername(String username) {
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        // Recherche de l'employé par son login
+        Employe employe = employeRepository.findByLogin(username)
+                .orElseThrow(() -> new UsernameNotFoundException("Employé non trouvé : " + username));
 
-        Employe employe = employeRepository.findByLogin(username);
-
-        if (employe == null) {
-            throw new ResourceNotFoundException("Utilisateur introuvable avec  login : " + username);
-        }
+        // Formatage du rôle : ROLE_ + libellé du profil (ex: ROLE_ADMINISTRATEUR)
+        String roleName = "ROLE_" + employe.getProfil().getLibelle().toUpperCase().replace(" ", "_");
 
         return new User(
                 employe.getLogin(),
                 employe.getPassword(),
-                List.of(() -> "ROLE_" + employe.getProfil().getCode())
+                Collections.singletonList(new SimpleGrantedAuthority(roleName))
         );
     }
 }
